--- a/demo/version2/knn.ipynb
+++ b/demo/version2/knn.ipynb
@@ -137,6 +137,7 @@
    ],
    "source": [
     "#here i will just save the model for api interaction and future recalling\n",
+    "import pickle",
     "model_path='knn_model.pkl'\n",
     "with open(model_path,'wb') as file:\n",
     "    pickle.dump(pipeline,file)\n",
